--- a/MLExercise3.ipynb
+++ b/MLExercise3.ipynb
@@ -493,7 +493,6 @@
    "source": [
     "# Decision Tree\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn import tree\n",
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Create the model\n",
@@ -648,7 +647,7 @@
    "source": [
     "##### Correlation \n",
     "\n",
-    "Based on the previous heatmap the fixed acidity has a 46% correlation with the density which is an important feature for the Decision Tree"
+    "Based on the previous heatmap the *fixed acidity* has a 46% correlation with the *density* which is an important feature as we see from the Decision Tree"
    ]
   },
   {
@@ -1050,12 +1049,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
-    "import numpy as np"
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis"
    ]
   },
   {
@@ -1187,21 +1185,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\vasil\\AppData\\Local\\Programs\\Python\\Python311\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import umap\n",
-    "\n",
+    "# Umap for train and test\n",
     "X_train_umap=umap.UMAP(n_components=2).fit_transform(X_train, y=y_train) \n",
     "X_test_umap=umap.UMAP(n_components=2).fit_transform(X_test, y=y_test)"
    ]
@@ -1220,7 +1209,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# Fit the model using umap\n",
     "knn=KNeighborsClassifier()\n",
     "knn.fit(X_train_umap,y_train)\n",
     "\n",
